@@ -116,6 +116,9 @@ Revision 4.4.10, released 2019-07-29
 
 - Rebased MIB importing code onto `importlib` because `imp` is long
   deprecated
+- MIB objects resolution made more forgiving to errors, added optional
+  `ignoreErrors` parameter to `ObjectType.resolveWithMib()` to control
+  that behaviour.
 - Fixed asyncore main loop to respect non-default timer resolution
 - Fixed `.setTimerResolution()` behaviour of abstract main loop dispatcher
   to update call intervals of the existing periodic dispatcher jobs
